@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: SizeAwareSharedMemoryCache.pm,v 1.7 2001/03/22 18:40:08 dclinton Exp $
+# $Id: SizeAwareSharedMemoryCache.pm,v 1.8 2001/03/22 21:41:35 dclinton Exp $
 # Copyright (C) 2001 DeWitt Clinton  All Rights Reserved
 #
 # Software distributed under the License is distributed on an "AS
@@ -220,22 +220,6 @@ sub _restore
 }
 
 
-sub _identifiers
-{
-  my ( $self ) = @_;
-
-  my $namespace = $self->get_namespace( ) or
-    croak( "Couldn't get namespace" );
-
-  my $cache_hash_ref = _Restore_Cache_Hash_Ref( ) or
-    croak( "Couldn't restore cache hash ref" );
-
-  return ( ) unless defined $cache_hash_ref->{$namespace};
-
-  return keys %{$cache_hash_ref->{$namespace}};
-}
-
-
 sub _delete_namespace
 {
   my ( $self, $namespace ) = @_;
@@ -246,6 +230,26 @@ sub _delete_namespace
   return $SUCCESS;
 }
 
+
+##
+# Instance properties
+##
+
+
+sub get_identifiers
+{
+  my ( $self ) = @_;
+
+  my $namespace = $self->get_namespace( ) or
+    croak( "Couldn't get namespace" );
+
+  my $cache_hash_ref = _Restore_Cache_Hash_Ref( ) or
+    croak( "Couldn't restore cache hash ref" );
+
+  return ( ) unless defined $cache_hash_ref->{ $namespace };
+
+  return keys %{ $cache_hash_ref->{ $namespace } };
+}
 
 
 
